# tidalcordrs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  example.env  notes.txt
.github/workflows/: docker-publish.yml  release.yml
src/: commands.rs  config.rs  ffmpeg_spool.rs  main.rs  session.rs  storage.rs  track.rs  url_handler.rs
