[package]
name = "tidalcordrs"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poise = "0.6.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["cache", "client", "gateway", "rustls_backend"] }
songbird = { version = "0.5.0", features = ["builtin-queue"]}
symphonia = "0.5.4"
tokio = { version = "1.45.1", features = ["full"] }