[package]
name = "tidalcordrs"
version = "1.2.2"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
html-escape = "0.2.13"
lol_html = "2.7.2"
poise = "0.6.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["form", "json", "query"] }
rustls = { version = "0.23.38", features = ["ring"] }
serde = "1.0.228"
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["cache", "client", "gateway", "rustls_backend"] }
songbird = { version = "0.6.0", features = ["builtin-queue"] }
symphonia = { version = "0.5.5", default-features = false, features = ["ogg"] }
tokio = { version = "1.52.1", features = ["full"] }
url = "2.5.8"
